trying parallel execution and code generation using gpt

--- a/script2.ipynb
+++ b/script2.ipynb
@@ -2,7 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "f1892b59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install required packages\n",
+    "%pip install cupy-cuda11x  # Adjust version based on your CUDA installation\n",
+    "import cupy as cp\n",
+    "import numpy as np\n",
+    "from scipy.linalg import expm, solve_discrete_lyapunov\n",
+    "import itertools\n",
+    "from polytope import Polytope, HyperRectangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c2923cd1",
    "metadata": {},
    "outputs": [
@@ -282,6 +298,130 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d17ac5c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPUClosedLoopSystem:\n",
+    "    \"\"\"\n",
+    "    GPU-accelerated version of ClosedLoopSystem\n",
+    "    \"\"\"\n",
+    "    def __init__(self, A_c, B_c, C, K, L, h):\n",
+    "        self.n = A_c.shape[0]\n",
+    "        \n",
+    "        # Move matrices to GPU\n",
+    "        self.A_c_gpu = cp.array(A_c)\n",
+    "        self.B_c_gpu = cp.array(B_c)\n",
+    "        self.C_gpu = cp.array(C)\n",
+    "        self.K_gpu = cp.array(K)\n",
+    "        self.L_gpu = cp.array(L)\n",
+    "        \n",
+    "        # Discretize the system matrices on GPU\n",
+    "        self.A_gpu = cp.array(expm(A_c * h))  # Keep expm on CPU as it's not available in CuPy\n",
+    "        self.B_gpu = cp.linalg.inv(self.A_c_gpu) @ (self.A_gpu - cp.eye(self.n)) @ self.B_c_gpu\n",
+    "        \n",
+    "        # Augmented matrix for successful update\n",
+    "        self.A1 = cp.block([\n",
+    "            [self.A_gpu, -self.B_gpu @ self.K_gpu],\n",
+    "            [self.L_gpu @ self.C_gpu, self.A_gpu - self.L_gpu @ self.C_gpu - self.B_gpu @ self.K_gpu]\n",
+    "        ])\n",
+    "\n",
+    "        # Augmented matrix for missed update\n",
+    "        self.A0 = cp.block([\n",
+    "            [self.A_gpu, -self.B_gpu @ self.K_gpu],\n",
+    "            [cp.zeros((self.n, self.n)), cp.eye(self.n)]\n",
+    "        ])\n",
+    "        \n",
+    "        self.I = cp.eye(self.n * 2)\n",
+    "        self.O = cp.zeros_like(self.A1)\n",
+    "        \n",
+    "    def to_cpu(self):\n",
+    "        \"\"\"Convert all matrices back to CPU for compatibility with existing code\"\"\"\n",
+    "        return {\n",
+    "            'A1': cp.asnumpy(self.A1),\n",
+    "            'A0': cp.asnumpy(self.A0),\n",
+    "            'I': cp.asnumpy(self.I),\n",
+    "            'O': cp.asnumpy(self.O)\n",
+    "        }\n",
+    "        \n",
+    "    def batch_compute_trajectories(self, initial_states, sequence):\n",
+    "        \"\"\"\n",
+    "        Compute multiple system trajectories in parallel on GPU\n",
+    "        \n",
+    "        Args:\n",
+    "            initial_states: Array of initial states (batch_size x state_dim)\n",
+    "            sequence: Array of 1s and 0s indicating successful/missed updates\n",
+    "        \"\"\"\n",
+    "        states_gpu = cp.array(initial_states)\n",
+    "        sequence_gpu = cp.array(sequence)\n",
+    "        \n",
+    "        trajectories = []\n",
+    "        trajectories.append(cp.asnumpy(states_gpu))\n",
+    "        \n",
+    "        for update in sequence_gpu:\n",
+    "            if update:\n",
+    "                states_gpu = self.A1 @ states_gpu.T\n",
+    "            else:\n",
+    "                states_gpu = self.A0 @ states_gpu.T\n",
+    "            trajectories.append(cp.asnumpy(states_gpu.T))\n",
+    "            \n",
+    "        return np.array(trajectories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b212bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage of GPU-accelerated system\n",
+    "def verify_partitions_gpu(system_gpu, partitions, sequence):\n",
+    "    \"\"\"\n",
+    "    Parallel verification of multiple partitions using GPU\n",
+    "    \"\"\"\n",
+    "    # Convert partitions to initial states\n",
+    "    initial_states = np.array([p.center for p in partitions])\n",
+    "    \n",
+    "    # Compute all trajectories in parallel\n",
+    "    trajectories = system_gpu.batch_compute_trajectories(initial_states, sequence)\n",
+    "    \n",
+    "    # Verify safety conditions (can be done on CPU as it's less compute-intensive)\n",
+    "    safe_partitions = []\n",
+    "    for i, trajectory in enumerate(trajectories):\n",
+    "        if is_trajectory_safe(trajectory):  # Define this based on your safety conditions\n",
+    "            safe_partitions.append(partitions[i])\n",
+    "    \n",
+    "    return safe_partitions\n",
+    "\n",
+    "# Convert existing system to GPU version\n",
+    "system_gpu = GPUClosedLoopSystem(A_c, B_c, C, K, L, h)\n",
+    "\n",
+    "# Example sequence of updates (1=success, 0=miss)\n",
+    "test_sequence = np.array([1, 0, 1, 1, 0, 1])\n",
+    "\n",
+    "# Time both CPU and GPU versions for comparison\n",
+    "import time\n",
+    "\n",
+    "print(\"Testing performance comparison:\")\n",
+    "\n",
+    "# CPU timing\n",
+    "start_time = time.time()\n",
+    "# Your existing verification code here\n",
+    "cpu_time = time.time() - start_time\n",
+    "print(f\"CPU time: {cpu_time:.4f} seconds\")\n",
+    "\n",
+    "# GPU timing\n",
+    "start_time = time.time()\n",
+    "safe_regions_gpu = verify_partitions_gpu(system_gpu, partitions, test_sequence)\n",
+    "gpu_time = time.time() - start_time\n",
+    "print(f\"GPU time: {gpu_time:.4f} seconds\")\n",
+    "print(f\"Speedup: {cpu_time/gpu_time:.2f}x\")"
+   ]
   }
  ],
  "metadata": {
