with modified model file generator

--- a/models/model_generator.ipynb
+++ b/models/model_generator.ipynb
@@ -1004,6 +1004,170 @@
     "    \n",
     "    print(\"Model files generated successfully!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c82e6223",
+   "metadata": {},
+   "source": [
+    "# Akash's Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b42342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_model(A, B, C, K, L, safex, Kmax, mmax, h, i, x0_bounds, xhat0_bounds, filename=\"suspension.model\"):\n",
+    "    \"\"\"\n",
+    "    Generate Flow* .model file for suspension system with arbitrary locations.\n",
+    "    \n",
+    "    Args:\n",
+    "        A, B, C, K, L : numpy arrays defining system matrices\n",
+    "        safex : 2x4 array with min/max bounds for x1..x4\n",
+    "        Kmax, mmax, h : parameters\n",
+    "        i : number of locations = i+1 (1,10,...)\n",
+    "        filename : output file\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n = A.shape[0]\n",
+    "    locations = [10**j for j in range(i)]  # e.g. i=4 -> [1, 10, 100, 1000]\n",
+    "\n",
+    "    # Precompute (A - BK - LC)\n",
+    "    BK = B @ K.reshape(1,-1)\n",
+    "    LC = L @ C.reshape(1,-1)\n",
+    "    Acl = A - BK - LC\n",
+    "\n",
+    "    # Build file\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        f.write(\"hybrid reachability\\n{\\n\")\n",
+    "        \n",
+    "        # Declare variables\n",
+    "        f.write(\" state var \" + \", \".join([f\"x{j+1}\" for j in range(n)]) + \", \")\n",
+    "        f.write(\", \".join([f\"x{j+1}_hat\" for j in range(n)]) + \", dt, gt, length, missct\\n\\n\")\n",
+    "\n",
+    "        # Parameters\n",
+    "        f.write(\" par\\n {\\n\")\n",
+    "        f.write(f\"  Kmax = {Kmax}\\n\")\n",
+    "        f.write(f\"  mmax = {mmax}\\n\")\n",
+    "        f.write(f\"  h = {h}\\n\")\n",
+    "        f.write(\" }\\n\\n\")\n",
+    "\n",
+    "        # Settings\n",
+    "        f.write(\" setting\\n {\\n\")\n",
+    "        f.write(\"  fixed steps 0.001\\n\")\n",
+    "        f.write(\"  time 0.2\\n\")\n",
+    "        f.write(\"  remainder estimation 1e-3\\n\")\n",
+    "        f.write(\"  identity precondition\\n\")\n",
+    "        f.write(\"  gnuplot octagon gt , x1\\n\")\n",
+    "        f.write(\"  fixed orders 12\\n\")\n",
+    "        f.write(\"  cutoff 1e-8\\n\")\n",
+    "        f.write(\"  precision 53\\n\")\n",
+    "        f.write(\"  output suspension_controller\\n\")\n",
+    "        f.write(f\"  max jumps {Kmax}\\n\")\n",
+    "        f.write(\"  print on\\n\")\n",
+    "        f.write(\" }\\n\\n\")\n",
+    "\n",
+    "        # Modes\n",
+    "        f.write(\" modes\\n {\\n\")\n",
+    "        for loc in locations:\n",
+    "            f.write(f\"  l{loc}\\n  {{\\n\")\n",
+    "            f.write(\"   poly ode 1\\n   {\\n\")\n",
+    "            # x dynamics\n",
+    "            for j in range(n):\n",
+    "                rhs = \" + \".join([f\"{A[j,k]}*x{k+1}\" for k in range(n)])\n",
+    "                rhs += \" - (\" + \" + \".join([f\"{B[j,0]*K[k]}*x{k+1}_hat\" for k in range(n)]) + \")\"\n",
+    "                f.write(f\"    x{j+1}' = {rhs}\\n\")\n",
+    "            # x_hat dynamics\n",
+    "            for j in range(n):\n",
+    "                #rhs = \" + \".join([f\"{Acl[j,k]}*x{k+1}_hat\" for k in range(n)])\n",
+    "                #rhs += \" + \" + \" + \".join([f\"{LC[j,0]}*x1\"])\n",
+    "                rhs = 0\n",
+    "                f.write(f\"    x{j+1}_hat' = {rhs}\\n\")\n",
+    "            f.write(f\"    dt' = {h}\\n    gt' = 1\\n    length' = 0\\n    missct' = 0\\n\")\n",
+    "            f.write(\"   }\\n   inv\\n   {\\n\")\n",
+    "            f.write(\"    length <= Kmax\\n    missct <= mmax\\n\")\n",
+    "            #for j in range(n):\n",
+    "                #f.write(f\"    x{j+1} <= {safex[1,j]}\\n\")\n",
+    "                #f.write(f\"    x{j+1} >= {safex[0,j]}\\n\")\n",
+    "            f.write(\"   }\\n  }\\n\\n\")\n",
+    "        f.write(\" }\\n\\n\")\n",
+    "\n",
+    "        # Jumps\n",
+    "        f.write(\" jumps\\n {\\n\")\n",
+    "        for i_from, loc_from in enumerate(locations):\n",
+    "            for i_to, loc_to in enumerate(locations):\n",
+    "                f.write(f\"  l{loc_from} -> l{loc_to}\\n\")\n",
+    "                f.write(\"  guard { \")\n",
+    "                digits = len(str(loc_to))\n",
+    "                f.write(f\"length + {digits} <= Kmax   missct + {digits-1} <= mmax   dt = {(i_from+1)*h} \")\n",
+    "                f.write(\"}\\n\")\n",
+    "                f.write(\"  reset {\\n\")\n",
+    "                for j in range(n):\n",
+    "                    rhs = \" + \".join([f\"{Acl[j,k]}*x{k+1}_hat\" for k in range(n)])\n",
+    "                    rhs += \" + \" + \" + \".join([f\"{LC[j,k]}*x{k+1}\" for k in range(n)])\n",
+    "                    f.write(f\"    x{j+1}_hat' := {rhs}\\n\")\n",
+    "                f.write(f\"    length' := length + {digits}\\n    missct' := missct + {digits-1}\\n    dt' := 0\\n\")\n",
+    "                f.write(\"  }\\n  interval aggregation\\n\\n\")\n",
+    "        f.write(\" }\\n\\n\")\n",
+    "\n",
+    "        # Init\n",
+    "        f.write(\" init\\n {\\n\")\n",
+    "        f.write(\"  l1\\n  {\\n\")\n",
+    "        for j in range(n):\n",
+    "            #f.write(f\"   x{j+1} in [-0.1,0.1]\\n\")\n",
+    "            f.write(f\"   x{j+1} in [{x0_bounds[j,0]}, {x0_bounds[j,1]}]\\n\")\n",
+    "        for j in range(n):\n",
+    "            #f.write(f\"   x{j+1}_hat in [-0.1,0.1]\\n\")\n",
+    "            f.write(f\"   x{j+1}_hat in [{xhat0_bounds[j,0]}, {xhat0_bounds[j,1]}]\\n\")\n",
+    "        f.write(\"   dt in [0,0]\\n   gt in [0,0]\\n   length in [0,0]\\n   missct in [0,0]\\n\")\n",
+    "        f.write(\"  }\\n }\\n }\\n\\n\")\n",
+    "\n",
+    "        # Unsafe\n",
+    "        f.write(\" unsafe\\n {\\n\")\n",
+    "        for loc in locations:\n",
+    "            for j in range(n):\n",
+    "                f.write(f\"  l{loc} {{ x{j+1} >= {safex[1,j]} }}\\n\")\n",
+    "                f.write(f\"  l{loc} {{ x{j+1} <= {safex[0,j]} }}\\n\")\n",
+    "        f.write(\" }\\n\")\n",
+    "\n",
+    "    print(f\".model file written to {filename}\")\n",
+    "\n",
+    "\n",
+    "# --------------------------\n",
+    "# Main script entry point\n",
+    "# --------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example matrices\n",
+    "    A = np.array([[0.995860265603438, 0.0378696105301410, 0.00212669277812880, 0.00160492825553481],\n",
+    "                  [-0.174562623798343,\t0.908578953704267,\t0.0461683633555589,\t0.0573094395666044],\n",
+    "                  [0.0311138708080227, 0.0160492825553481, 0.935759216765522, 0.0151544413769853],\n",
+    "                  [1.08396104971604, 0.573094395666044, -2.29631635987487, 0.0906898643677941]])\n",
+    "    B = np.array([[0.0341116067291290],[1.27458305177487],[0.336215739966162],[-16.9738474024853]])\n",
+    "    C = np.array([[1,0,0,0]])\n",
+    "    K = np.array([3.69840485205769, 0.527354601469353, -0.0569469847116374, 0.0311945072320842])  # example\n",
+    "    L = np.array([[0.627216669816836],[0.0776672166534858],[0.0335031868276200],[0.804439585315081]])   # example\n",
+    "\n",
+    "    safex = np.array([[-2, -200, -100, -600],\n",
+    "                      [ 2, 200, 100, 600]])\n",
+    "\n",
+    "    # Initial ranges for x and x_hat\n",
+    "    x0_bounds = np.array([[-1, 1],\n",
+    "                          [-100, 100],\n",
+    "                          [-50, 50],\n",
+    "                          [-300, 300]])\n",
+    "    xhat0_bounds = np.array([[-1, 1],\n",
+    "                          [-100, 100],\n",
+    "                          [-50, 50],\n",
+    "                          [-300, 300]])\n",
+    "\n",
+    "    generate_model(A, B, C, K, L, safex, Kmax=20, mmax=5, h=0.04, i=4, x0_bounds=x0_bounds, xhat0_bounds=xhat0_bounds, filename=\"suspension.model\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
