--- a/models/model_generator.ipynb
+++ b/models/model_generator.ipynb
@@ -1001,11 +1001,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "id": "24b42342",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: polytope in c:\\users\\sunan\\miniconda3\\envs\\py12\\lib\\site-packages (0.2.5)\n",
+      "Requirement already satisfied: networkx>=3.0 in c:\\users\\sunan\\miniconda3\\envs\\py12\\lib\\site-packages (from polytope) (3.4.2)\n",
+      "Requirement already satisfied: numpy>=1.24.1 in c:\\users\\sunan\\miniconda3\\envs\\py12\\lib\\site-packages (from polytope) (2.2.2)\n",
+      "Requirement already satisfied: scipy>=1.10.0 in c:\\users\\sunan\\miniconda3\\envs\\py12\\lib\\site-packages (from polytope) (1.15.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install polytope\n",
     "import numpy as np\n",
     "import itertools\n",
     "from polytope import Polytope\n",
@@ -1239,9 +1252,8 @@
     "        f.write(\" init\\n {\\n\")\n",
     "        f.write(\"  l0\\n  {\\n\")\n",
     "        for j in range(n):\n",
-    "            for part in x0_bounds:\n",
-    "                f.write(f'{part.A[2*j][j]}*x{j+1} <= {part.b[2*j]}  {-1*part.A[2*j+1][j]}*x{j+1} >= {-1*part.b[2*j+1]}\\n')\n",
-    "                f.write(f\"{part.A[2*j][j]}*x{j+1}_hat <= {part.b[2*j]}  {-1*part.A[2*j+1][j]}*x{j+1}_hat >= {-1*part.b[2*j+1]}\\n\")\n",
+    "            f.write(f'{x0_bounds.A[2*j][j]}*x{j+1} <= {x0_bounds.b[2*j]}  {-1*x0_bounds.A[2*j+1][j]}*x{j+1} >= {-1*x0_bounds.b[2*j+1]}\\n')\n",
+    "            f.write(f\"{x0_bounds.A[2*j][j]}*x{j+1}_hat <= {x0_bounds.b[2*j]}  {-1*x0_bounds.A[2*j+1][j]}*x{j+1}_hat >= {-1*x0_bounds.b[2*j+1]}\\n\")\n",
     "\n",
     "        f.write(\"   dt in [0,0]\\n   gt in [0,0]\\n   length in [0,0]\\n   missct in [0,0]\\n\")\n",
     "        f.write(f\"   mdadt in [{str(mdadt1)},{str(mdadt1)}]\\n   mdadtl1 in [0,0]\\n\")\n",
@@ -1273,14 +1285,17 @@
     "    # dims = len(grid_delta)\n",
     "    # convert numpy array to list of tuples\n",
     "    safe_space_bounds = [tuple(row) for row in safex.T]\n",
-    "    print(f\"Safe space bounds: {safe_space_bounds} from {safex}\")\n",
-    "    print(dims)\n",
-    "    print(safe_space_bounds[2][0])\n",
+    "    # print(f\"Safe space bounds: {safe_space_bounds} from {safex}\")\n",
+    "    # print(dims)\n",
+    "    # print(safe_space_bounds[2][0])\n",
     "    partitions = []\n",
-    "    print([np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], grid_delta[i]) for i in range(dims)])\n",
+    "    # print([np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], grid_delta[i]) for i in range(dims)])\n",
     "    # Use Polytope for partitioning\n",
+    "    ii = 1\n",
     "    for point in itertools.product(*[np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], grid_delta[i]) for i in range(dims)]):\n",
     "        # Each partition is a box, but represented as a Polytope\n",
+    "        print(f\"Creating partition {str(ii)} at point: {point}\")\n",
+    "        ii += 1\n",
     "        A = []\n",
     "        b = []\n",
     "        equations = []\n",
@@ -1300,12 +1315,18 @@
     "            A.append(a_lower)\n",
     "            b.append(-lower)        \n",
     "        partitions.append(Polytope(np.array(A), np.array(b)))\n",
+    "        # for part in partitions:  \n",
+    "        #     for i in range(dims):\n",
+    "        #         print(f'{part.A[2*i][i]}*x{i+1} <= {part.b[2*i]}  {-1*part.A[2*i+1][i]}*x{i+1} >= {-1*part.b[2*i+1]}')\n",
+    "        #         print(f'{part.A[2*i][i]}*x{i+1}_hat <= {part.b[2*i]}  {-1*part.A[2*i+1][i]}*x{i+1}_hat >= {-1*part.b[2*i+1]}')\n",
+    "        return (partitions, ii)\n",
+    "\n",
     "    # print polytope partitions as equations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "id": "6ae66455",
    "metadata": {},
    "outputs": [],
@@ -1366,7 +1387,7 @@
     "                    [ 2, 200, 100, 600]])\n",
     "\n",
     "# Grid granularity for partitioning X_S\n",
-    "grid_delta = [0.01, 0.01, 0.05, 0.05]\n"
+    "grid_delta = [1, 100, 50, 600]"
    ]
   },
   {
@@ -1379,157 +1400,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Safe space bounds: [(-2, 2), (-200, 200), (-100, 100), (-600, 600)] from [[  -2 -200 -100 -600]\n",
-      " [   2  200  100  600]]\n",
-      "4\n",
-      "-100\n",
-      "[array([-2.  , -1.99, -1.98, -1.97, -1.96, -1.95, -1.94, -1.93, -1.92,\n",
-      "       -1.91, -1.9 , -1.89, -1.88, -1.87, -1.86, -1.85, -1.84, -1.83,\n",
-      "       -1.82, -1.81, -1.8 , -1.79, -1.78, -1.77, -1.76, -1.75, -1.74,\n",
-      "       -1.73, -1.72, -1.71, -1.7 , -1.69, -1.68, -1.67, -1.66, -1.65,\n",
-      "       -1.64, -1.63, -1.62, -1.61, -1.6 , -1.59, -1.58, -1.57, -1.56,\n",
-      "       -1.55, -1.54, -1.53, -1.52, -1.51, -1.5 , -1.49, -1.48, -1.47,\n",
-      "       -1.46, -1.45, -1.44, -1.43, -1.42, -1.41, -1.4 , -1.39, -1.38,\n",
-      "       -1.37, -1.36, -1.35, -1.34, -1.33, -1.32, -1.31, -1.3 , -1.29,\n",
-      "       -1.28, -1.27, -1.26, -1.25, -1.24, -1.23, -1.22, -1.21, -1.2 ,\n",
-      "       -1.19, -1.18, -1.17, -1.16, -1.15, -1.14, -1.13, -1.12, -1.11,\n",
-      "       -1.1 , -1.09, -1.08, -1.07, -1.06, -1.05, -1.04, -1.03, -1.02,\n",
-      "       -1.01, -1.  , -0.99, -0.98, -0.97, -0.96, -0.95, -0.94, -0.93,\n",
-      "       -0.92, -0.91, -0.9 , -0.89, -0.88, -0.87, -0.86, -0.85, -0.84,\n",
-      "       -0.83, -0.82, -0.81, -0.8 , -0.79, -0.78, -0.77, -0.76, -0.75,\n",
-      "       -0.74, -0.73, -0.72, -0.71, -0.7 , -0.69, -0.68, -0.67, -0.66,\n",
-      "       -0.65, -0.64, -0.63, -0.62, -0.61, -0.6 , -0.59, -0.58, -0.57,\n",
-      "       -0.56, -0.55, -0.54, -0.53, -0.52, -0.51, -0.5 , -0.49, -0.48,\n",
-      "       -0.47, -0.46, -0.45, -0.44, -0.43, -0.42, -0.41, -0.4 , -0.39,\n",
-      "       -0.38, -0.37, -0.36, -0.35, -0.34, -0.33, -0.32, -0.31, -0.3 ,\n",
-      "       -0.29, -0.28, -0.27, -0.26, -0.25, -0.24, -0.23, -0.22, -0.21,\n",
-      "       -0.2 , -0.19, -0.18, -0.17, -0.16, -0.15, -0.14, -0.13, -0.12,\n",
-      "       -0.11, -0.1 , -0.09, -0.08, -0.07, -0.06, -0.05, -0.04, -0.03,\n",
-      "       -0.02, -0.01,  0.  ,  0.01,  0.02,  0.03,  0.04,  0.05,  0.06,\n",
-      "        0.07,  0.08,  0.09,  0.1 ,  0.11,  0.12,  0.13,  0.14,  0.15,\n",
-      "        0.16,  0.17,  0.18,  0.19,  0.2 ,  0.21,  0.22,  0.23,  0.24,\n",
-      "        0.25,  0.26,  0.27,  0.28,  0.29,  0.3 ,  0.31,  0.32,  0.33,\n",
-      "        0.34,  0.35,  0.36,  0.37,  0.38,  0.39,  0.4 ,  0.41,  0.42,\n",
-      "        0.43,  0.44,  0.45,  0.46,  0.47,  0.48,  0.49,  0.5 ,  0.51,\n",
-      "        0.52,  0.53,  0.54,  0.55,  0.56,  0.57,  0.58,  0.59,  0.6 ,\n",
-      "        0.61,  0.62,  0.63,  0.64,  0.65,  0.66,  0.67,  0.68,  0.69,\n",
-      "        0.7 ,  0.71,  0.72,  0.73,  0.74,  0.75,  0.76,  0.77,  0.78,\n",
-      "        0.79,  0.8 ,  0.81,  0.82,  0.83,  0.84,  0.85,  0.86,  0.87,\n",
-      "        0.88,  0.89,  0.9 ,  0.91,  0.92,  0.93,  0.94,  0.95,  0.96,\n",
-      "        0.97,  0.98,  0.99,  1.  ,  1.01,  1.02,  1.03,  1.04,  1.05,\n",
-      "        1.06,  1.07,  1.08,  1.09,  1.1 ,  1.11,  1.12,  1.13,  1.14,\n",
-      "        1.15,  1.16,  1.17,  1.18,  1.19,  1.2 ,  1.21,  1.22,  1.23,\n",
-      "        1.24,  1.25,  1.26,  1.27,  1.28,  1.29,  1.3 ,  1.31,  1.32,\n",
-      "        1.33,  1.34,  1.35,  1.36,  1.37,  1.38,  1.39,  1.4 ,  1.41,\n",
-      "        1.42,  1.43,  1.44,  1.45,  1.46,  1.47,  1.48,  1.49,  1.5 ,\n",
-      "        1.51,  1.52,  1.53,  1.54,  1.55,  1.56,  1.57,  1.58,  1.59,\n",
-      "        1.6 ,  1.61,  1.62,  1.63,  1.64,  1.65,  1.66,  1.67,  1.68,\n",
-      "        1.69,  1.7 ,  1.71,  1.72,  1.73,  1.74,  1.75,  1.76,  1.77,\n",
-      "        1.78,  1.79,  1.8 ,  1.81,  1.82,  1.83,  1.84,  1.85,  1.86,\n",
-      "        1.87,  1.88,  1.89,  1.9 ,  1.91,  1.92,  1.93,  1.94,  1.95,\n",
-      "        1.96,  1.97,  1.98,  1.99]), array([-200.  , -199.99, -199.98, ...,  199.97,  199.98,  199.99]), array([-100.  ,  -99.95,  -99.9 , ...,   99.85,   99.9 ,   99.95]), array([-600.  , -599.95, -599.9 , ...,  599.85,  599.9 ,  599.95])]\n"
+      "Creating partition 1 at point: (np.int64(-2), np.int64(-200), np.int64(-100), np.int64(-600))\n",
+      "Partitioned safe space into 2 grid cells using Polytope.\n",
+      "Initial analysis -> 4 locations, Max consecutive miss (CM)=3, Max total miss (M)=2\n",
+      "\n",
+      "--- Generating model for each partition and Verifying for m_bar = 0 misses ---\n",
+      ".model file written to suspension_control_[2]_20_0.model\n",
+      "\n",
+      "--- Generating model for each partition and Verifying for m_bar = 1 misses ---\n",
+      ".model file written to suspension_control_[1]_20_1.model\n",
+      "\n",
+      "--- Generating model for each partition and Verifying for m_bar = 2 misses ---\n",
+      ".model file written to suspension_control_[0]_20_2.model\n"
      ]
     }
    ],
    "source": [
-    "partitions = partition_safex(safex, 100*grid_delta, dims)\n",
-    "print(f\"Partitioned safe space into {len(partitions)} grid cells using Polytope.\")\n",
+    "partitions, count = partition_safex(safex, grid_delta, dims)\n",
+    "print(f\"Partitioned safe space into {str(count)} grid cells using Polytope.\")\n",
+    "Kmax = 20 # hyperperiod\n",
+    "mmax = 10 # max misses\n",
+    "nl = 4\n",
+    "cm_bar = 3 # max(a0.keys()) if a0 else 0 # max consec. miss ctr\n",
+    "m_bar_max = 2 # Kmax - (Kmax // (cm_bar + 1)) if cm_bar > -1 else 0\n",
+    "print(f\"Initial analysis -> {nl} locations, Max consecutive miss (CM)={cm_bar}, Max total miss (M)={m_bar_max}\")\n",
     "\n",
-    "modelfilename = f'{system}.model'\n",
-    "modelfile = os.path.join(curdir, f'{system}', 'models', modelfilename)\n",
-    "for partition in partitions:\n",
-    "    print(f\"Generating model for partition with bounds: {partition}\")\n",
-    "    generate_model(a, b, c, ad, bd, k, l, h, safex, partition, modelfilename, \n",
-    "                                                mdadt1=4, i=4, Kmax=20, mmax=10)\n",
-    "    "
+    "# Initialize the specification list\n",
+    "spec_list = [{'X': [], 'm_bar': m, 'cm_bar': cm_bar, 'cm': 0, 'K': Kmax} for m in range(m_bar_max + 1)]\n",
+    "\n",
+    "# Initialize Safety Guard (SG) data structure\n",
+    "sg = {m: {} for m in range(m_bar_max + 1)}\n",
+    "\n",
+    "# --- loop for all possible miss counts --- #\n",
+    "for m_j in range(m_bar_max + 1):\n",
+    "    for partition in partitions:    \n",
+    "        print(f\"\\n--- Generating model for each partition and Verifying for m_bar = {m_j} misses ---\")\n",
+    "        modelfilename = f'{system}_{str(count)}_{str(Kmax)}_{m_j}.model'\n",
+    "        modelfile = os.path.join(curdir, f'{system}', 'models', modelfilename)\n",
+    "        generate_model(a, b, c, ad, bd, k, l, h, safex, partition, modelfilename, \n",
+    "                                                    mdadt1=4, i=nl, Kmax=Kmax, mmax=m_j)\n",
+    "        count = count - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 17,
    "id": "583bca8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "dims = len(grid_delta)\n",
-    "safe_space_bounds = [tuple(row) for row in safex.T]\n",
-    "print(f\"Safe space bounds: {safe_space_bounds} from {safex}\")\n",
-    "print(grid_delta)\n",
-    "points =[np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], grid_delta[i]) for i in range(dims)]\n",
-    "print(len(points[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a788b612",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %pip install scipy numpy cvxopt polytope matplotlib\n",
-    "import numpy as np\n",
-    "from scipy.linalg import expm, solve_discrete_lyapunov\n",
-    "import itertools\n",
-    "from polytope import Polytope\n",
-    "import matplotlib.pyplot as plt\n",
-    "# %pip install cupy-cuda11x  # Adjust version based on your CUDA installation\n",
-    "# import cupy as cp\n",
-    "#----------------------------#\n",
-    "# Safe state space X_S: [x, x_dot, x_hat, x_dot_hat]\n",
-    "# Here, we only constrain the physical states x and x_dot.\n",
-    "# The observer states are allowed to vary more widely.\n",
-    "safex = np.array([[-2, -200, -100, -600],\n",
-    "                      [ 2, 200, 100, 600]])\n",
-    "\n",
-    "# derive safe_space_bounds from safex  \n",
-    "# safe_space_bounds = safex.T.tolist()  # Transpose to get [(min1, max1), (min2, max2), ...]\n",
-    "safe_space_bounds = [\n",
-    "    (-2.0, 2.0),    # position\n",
-    "    (-2.0, 2.0),    # velocity\n",
-    "    (-10.0, 10.0),  # estimated position\n",
-    "    (-10.0, 10.0)   # estimated velocity\n",
-    "]\n",
-    "\n",
-    "# Grid granularity for partitioning X_S\n",
-    "grid_delta = [0.01, 0.01, 0.05, 0.05]\n",
-    "partitions = []\n",
-    "\n",
-    "# Use Polytope for partitioning\n",
-    "for point in itertools.product(*[np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], 100*grid_delta[i]) for i in range(dims)]):\n",
-    "    # Each partition is a box, but represented as a Polytope\n",
-    "    A = []\n",
-    "    b = []\n",
-    "    equations = []\n",
-    "    for i in range(dims):\n",
-    "        # A x <= b representation of box constraints\n",
-    "        \n",
-    "        lower = point[i]\n",
-    "        upper = point[i] + 100*grid_delta[i]\n",
-    "        # print(f\"Dimension {i+1} in [{point[i]}, {point[i] + 100*grid_delta[i]}]\")\n",
-    "        # Create equations in the form: x_i <= upper and -x_i <= -lower\n",
-    "        a_upper = np.zeros(dims)\n",
-    "        a_upper[i] = 1\n",
-    "        A.append(a_upper)\n",
-    "        b.append(upper)\n",
-    "        \n",
-    "        a_lower = np.zeros(dims)\n",
-    "        a_lower[i] = -1\n",
-    "        A.append(a_lower)\n",
-    "        b.append(-lower)        \n",
-    "    partitions.append(Polytope(np.array(A), np.array(b)))\n",
-    "    # print polytope partitions as equations\n",
-    "print(f\"Step 1: Partitioned safe space into {len(partitions)} grid cells using Polytope.\")\n",
-    "# for i in range(0, len(partitions), 2):\n",
-    "for part in partitions:  \n",
-    "    for i in range(dims):\n",
-    "        print(f'{part.A[2*i][i]}*x{i+1} <= {part.b[2*i]}  {-1*part.A[2*i+1][i]}*x{i+1} >= {-1*part.b[2*i+1]}')\n",
-    "        print(f'{part.A[2*i][i]}*x{i+1}_hat <= {part.b[2*i]}  {-1*part.A[2*i+1][i]}*x{i+1}_hat >= {-1*part.b[2*i+1]}')\n"
+    "# dims = len(grid_delta)\n",
+    "# safe_space_bounds = [tuple(row) for row in safex.T]\n",
+    "# print(f\"Safe space bounds: {safe_space_bounds} from {safex}\")\n",
+    "# print(grid_delta)\n",
+    "# points =[np.arange(safe_space_bounds[i][0], safe_space_bounds[i][1], grid_delta[i]) for i in range(dims)]\n",
+    "# print(len(points[0]))\n",
+    "print(partitions)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py12",
    "language": "python",
    "name": "python3"
   },
@@ -1543,7 +1483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
